--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Esko Dijk - Blog & publications
+title: Esko Dijk
 email: esko@ieee.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Here goes the site description.
+  Blog & publications.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: EskoDijk
