--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Esko Dijk - Blog, publications, patents
+title: Esko Dijk - Blog & publications
 email: esko@ieee.org
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal website with blog, publications list and patents. If you
@@ -29,6 +29,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
