added patents page

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,5 +4,8 @@
 - title: "Publications"
   href: "/publications/"
 
-- title: "About"
+- title: "Patents"
+  href: "/patents/"
+
+  - title: "About"
   href: "/about/"
